<resources>
    <string name="app_name">Tri-OS</string>
    <string name="login">Sign In</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="resetPassword">Reset Password</string>
    <string name="confirmRegister">Sign Up</string>
    <string name="confirmDriver">Register Driver</string>
    <string name="selectDriver">Select Driver</string>
    <string name="confirmUpdateDriver">Update Driver</string>
    <string name="newDriver">Add Driver</string>
    <string name="logout">Sign Out</string>
    <string name="banner">Tri-OS</string>
    <string name="bannerDescription">Your local tricycle operation app</string>
    <string name="driverMenu">Driver Menu</string>
    <string name="welcome"></string>
    <string name="userPlaceholder"></string>
    <string name="driverRegistration">Driver Registration</string>
    <string name="driverUpdate">Update Driver</string>
    <string name="driverFire">Remove Driver</string>
    <string name="detailsDriver">Driver Details</string>
</resources>